--- a/public/style.css
+++ b/public/style.css
@@ -270,13 +270,27 @@ section {
     position: relative;
 }
 
+.container-hand {
+    position: relative;
+}
+
+.hand {
+    position: absolute;
+    height: auto;
+    width: 30%;
+    right: -2.5%;
+    transform: rotate(180deg) rotate3D(90deg);
+}
+
+
 .titulo-sobre {
     font-family: 'titulo';
     color: white;
     text-align: justify;
     font-size: 10rem;
 }
-.texto-sobre{
+
+.texto-sobre {
     position: absolute;
     font-family: 'texto';
     color: white;
@@ -285,9 +299,9 @@ section {
 }
 
 .container-sobre {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+  margin-inline: var(--margem-padraoX);
+    /* esquerda e direita */
     margin-block: 5%;
     /* topo e baixo */
     text-align: left;
